2008-07-26  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.[ch]: do not autocomplete when tags are
	selected from tag popup list.

2008-07-26  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.[ch]: improved tag drawing in popup
	list.

2008-07-22  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	* app/widgets/gimpdatafactoryview.c
	* app/widgets/gimptagentry.[ch]: trigger immediate tag assignment when
	toggling tags in the popup list.

2008-07-22  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_focus_in),
	(gimp_tag_entry_toggle_desc): fixed ill recursion which later results
	in segmentation fault.

2008-07-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpdatafactoryview.c
	(gimp_data_factory_view_construct): sort GimpData resources in correct
	order.

2008-07-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.c (gimp_tag_cache_finalize),
	(gimp_tag_cache_get_memsize): some fixes to finalization and memsize
	calculations.

2008-07-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	(gimp_combo_tag_entry_popup_list): focus tag entry when tag popup is
	dropped down to give user better feedback and get rid of description
	text.

2008-07-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	(gimp_combo_tag_entry_popup_list): correctly possition popup window
	when it appears on top of tag entry.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_class_init),
	(gimp_tag_entry_dispose): cleaned up a bit: marked some strings for
	translation, free resources on dispose.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_changed),
	(gimp_tag_entry_toggle_desc): properly check if there is at least one
	valid tag entered.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>
