@@ -1,5 +1,12 @@
 2008-07-26  Aurimas Juška  <aurisj@svn.gnome.org>
 
+	* app/widgets/gimptagentry.c (gimp_tag_entry_backspace),
+	(gimp_tag_entry_select_jellybean): tag jellybeans are now selected in
+	such way that after deleting tag next backspace or delete press would
+	result in selection of another tag.
+
+2008-07-26  Aurimas Juška  <aurisj@svn.gnome.org>
+
 	* app/widgets/gimptagentry.[ch]: do not autocomplete when tags are
 	selected from tag popup list.
 
